--- a/docs/main.tex
+++ b/docs/main.tex
@@ -10,12 +10,12 @@
 \usepackage{textcomp}
 
 \begin{document}
-\title{OmniVelma}
+\title{OmniVelma\\Jeżdżąca podstawa pod robota manipulującego}
 \author{Radosław Świątkiewicz}
 \date{\today}
 \maketitle
 
 \tableofcontents
 
-
+\input{about.tex}
 \end{document} 
