--- a/docs/main.tex
+++ b/docs/main.tex
@@ -7,6 +7,7 @@
 \usepackage{polski}
 \usepackage[polish]{babel}
 \usepackage{hyperref}
+\usepackage{gensymb}
 \usepackage{textcomp}
 
 \begin{document}
