--- a/docs/main.tex
+++ b/docs/main.tex
@@ -11,7 +11,7 @@
 \usepackage{textcomp}
 
 \begin{document}
-\title{OmniVelma\\Jeżdżąca podstawa pod robota manipulującego}
+\title{OmniVelma\\Jeżdżąca podstawa na kołach szwedzkich}
 \author{Radosław Świątkiewicz}
 \date{\today}
 \maketitle
