--- a/docs/about.tex
+++ b/docs/about.tex
@@ -45,6 +45,24 @@ Pozwala to także na pokonywanie drobnych nierówności terenu.
 Bez tego zawiasu nierówna podłoga spowodowała by, że na przykład tylko trzy koła dotykałyby podłoża w danym momencie uniemożliwiając sprawne sterowanie.
 Niedeterministyczne tarcie kół jest niewykrywalne w bezpośredni sposób, więc należy je wyeliminować w jeden z tych sposobów.
 
+\begin{figure}
+\centering
+ \includegraphics[width=0.5\textwidth]{graphics/base_top.pdf}
+\caption{Baza jezdna widziana od góry.}
+\end{figure} 
+
+\begin{figure}
+\centering
+ \includegraphics[width=0.5\textwidth]{graphics/base_side.pdf}
+\caption{Baza jezdna widziana od prawej strony.}
+\end{figure} 
+
+\begin{figure}
+\centering
+ \includegraphics[width=0.5\textwidth]{graphics/base_front.pdf}
+\caption{Baza jezdna widziana od tyłu.}
+\end{figure} 
+
 \section{Składniki systemu}
 Symulacja składa się z kilku odrębnych składników, które komunikują się ze sobą poprzez specjalne interfejsy oparte o kolejki wiadomości.
 To pozwala zamieniać i przepisywać elementy zachowując tę samą komunikację między składnikami i nie tracąc kompatybilności.
