--- a/docs/main.tex
+++ b/docs/main.tex
@@ -9,12 +9,10 @@
 \usepackage{hyperref}
 \usepackage{gensymb}
 \usepackage{textcomp}
+\usepackage{float}
 
 \begin{document}
-\title{OmniVelma\\Jeżdżąca podstawa na kołach szwedzkich}
-\author{Radosław Świątkiewicz}
-\date{\today}
-\maketitle
+\input{title.tex}
 
 \tableofcontents
 
